fix task button not showing up

--- a/app/globals.css
+++ b/app/globals.css
@@ -195,15 +195,35 @@ body {
   background-color: #5b4985;
 }
 
-.convert-task-btn,
-.dropdown-task-add-btn {
-  background-color: #a198af;
+.task-dropdown-add-task-btn {
+  background-color: #5f5488d2 !important;
+  border-color: #827a94;
   transition: background-color 150ms ease;
 }
 
-.convert-task-btn:hover,
-.dropdown-task-add-btn:hover {
-  background-color: #7c718f;
+.task-dropdown-add-task-btn:hover {
+  background-color: #5f5485 !important;
+}
+
+.convert-task-btn {
+  background-color: #827a94 !important;
+  border-color: #968dac;
+  transition: background-color 150ms ease;
+}
+
+.convert-task-btn:hover {
+  background-color: #756a85 !important;
+}
+
+.task-dropdown-import-btn {
+  border-color: rgb(131, 131, 139) !important;
+  background-color: #8b849e !important;
+  color: #f5f5f5;
+  transition: background-color 150ms ease;
+}
+
+.task-dropdown-import-btn:hover {
+  background-color: rgb(129, 117, 148) !important;
 }
 
 .delete-btn {
@@ -432,6 +452,7 @@ html.dark .bg-primary-dark {
 }
 
 html.dark .import-btn,
+html.dark .task-dropdown-import-btn,
 html.dark .subscribe-btn {
   border-color: rgb(97, 93, 109) !important;
   background-color: #45425a !important;
@@ -532,6 +553,7 @@ html.dark .convert-task-btn,
 html.dark .task-dropdown-add-task-btn {
   background-color: #ad9ec071;
   transition: background-color 150ms ease;
+  border-color: #797783;
 }
 
 html.dark .convert-task-btn:hover,
